--- a/index.html
+++ b/index.html
@@ -135,16 +135,16 @@
   </header>
 
   <div class="carousel" id="carousel">
-    <div class="product"><img src="https://via.placeholder.com/200x120?text=بطاقة+1" alt="منتج 1"><button class="buy-btn">شراء</button></div>
-    <div class="product"><img src="https://via.placeholder.com/200x120?text=بطاقة+2" alt="منتج 2"><button class="buy-btn">شراء</button></div>
-    <div class="product"><img src="https://via.placeholder.com/200x120?text=بطاقة+3" alt="منتج 3"><button class="buy-btn">شراء</button></div>
-    <div class="product"><img src="https://via.placeholder.com/200x120?text=بطاقة+4" alt="منتج 4"><button class="buy-btn">شراء</button></div>
-    <div class="product"><img src="https://via.placeholder.com/200x120?text=بطاقة+5" alt="منتج 5"><button class="buy-btn">شراء</button></div>
-    <div class="product"><img src="https://via.placeholder.com/200x120?text=بطاقة+6" alt="منتج 6"><button class="buy-btn">شراء</button></div>
-    <div class="product"><img src="https://via.placeholder.com/200x120?text=بطاقة+7" alt="منتج 7"><button class="buy-btn">شراء</button></div>
-    <div class="product"><img src="https://via.placeholder.com/200x120?text=بطاقة+8" alt="منتج 8"><button class="buy-btn">شراء</button></div>
-    <div class="product"><img src="https://via.placeholder.com/200x120?text=بطاقة+9" alt="منتج 9"><button class="buy-btn">شراء</button></div>
-    <div class="product"><img src="https://via.placeholder.com/200x120?text=بطاقة+10" alt="منتج 10"><button class="buy-btn">شراء</button></div>
+    <div class="product"><img src="https://c.top4top.io/p_3424orxg80.jpeg" alt="بطاقة GOOGLE PLAY"><button class="buy-btn">شراء</button></div>
+    <div class="product"><img src="https://c.top4top.io/p_3424orxg80.jpeg" alt="بطاقة GOOGLE PLAY"><button class="buy-btn">شراء</button></div>
+    <div class="product"><img src="https://c.top4top.io/p_3424orxg80.jpeg" alt="بطاقة GOOGLE PLAY"><button class="buy-btn">شراء</button></div>
+    <div class="product"><img src="https://c.top4top.io/p_3424orxg80.jpeg" alt="بطاقة GOOGLE PLAY"><button class="buy-btn">شراء</button></div>
+    <div class="product"><img src="https://c.top4top.io/p_3424orxg80.jpeg" alt="بطاقة GOOGLE PLAY"><button class="buy-btn">شراء</button></div>
+    <div class="product"><img src="https://c.top4top.io/p_3424orxg80.jpeg" alt="بطاقة GOOGLE PLAY"><button class="buy-btn">شراء</button></div>
+    <div class="product"><img src="https://c.top4top.io/p_3424orxg80.jpeg" alt="بطاقة GOOGLE PLAY"><button class="buy-btn">شراء</button></div>
+    <div class="product"><img src="https://c.top4top.io/p_3424orxg80.jpeg" alt="بطاقة GOOGLE PLAY"><button class="buy-btn">شراء</button></div>
+    <div class="product"><img src="https://c.top4top.io/p_3424orxg80.jpeg" alt="بطاقة GOOGLE PLAY"><button class="buy-btn">شراء</button></div>
+    <div class="product"><img src="https://c.top4top.io/p_3424orxg80.jpeg" alt="بطاقة GOOGLE PLAY"><button class="buy-btn">شراء</button></div>
   </div>
 
   <div class="note">لاللإسترداد لذا يرجى العلم</div>
